--- a/1-2.html
+++ b/1-2.html
@@ -28,13 +28,13 @@
 <blockquote> 
 
 <BR><HR><H2>階層構造</H2>
-　Kodatunoの階層構造を下図に示します。Kodatunoが提供するCAM Kernelは大きく分けて、GE部とGUI部に分けられます。
-GE部では、NURBS曲線や曲面の演算ルーチン、CADデータフォーマットIGESやSTLの読み込みルーチン、汎用演算ルーチン、
-描画ルーチンなどを提供します。またGUI部では、平林俊一氏が開発されたマルチプラットフォームウィンドウアプリケーション
-であるWide Studioをベースとし、グラフィックエンジンとしてOpenGLを用いています。<BR>
-　ユーザーはKodatuno(GE/GUI)が提供する各種関数ライブラリを用いて独自のアプリケーションを構築することができます。
-また、Kodatuno自体もオープンソースですので、Kodatuno内部のソースコードを変更することで、更なるアプリケーション
-の拡張が可能です。
+　Kodatunoの階層構造を下図に示します．Kodatunoが提供するCAM Kernelは大きく分けて，GE部とGUI部に分けられます．
+GE部では，NURBS曲線や曲面の演算ルーチン，CADデータフォーマットIGESやSTLの読み込みルーチン，汎用演算ルーチン，
+描画ルーチンなどを提供します．またGUI部では，平林俊一氏が開発されたマルチプラットフォームウィンドウアプリケーション
+であるWide Studioをベースとし，グラフィックエンジンとしてOpenGLを用いています．<BR>
+　ユーザーはKodatuno(GE/GUI)が提供する各種関数ライブラリを用いて独自のアプリケーションを構築することができます．
+また，Kodatuno自体もオープンソースですので，Kodatuno内部のソースコードを変更することで，更なるアプリケーション
+の拡張が可能です．
 
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/Class Structure.jpg"></CENTER></P>
