--- a/2-1.html
+++ b/2-1.html
@@ -28,27 +28,27 @@
 <blockquote> 
 
 <BR><HR><H2>環境構築</H2>
-Kodatunoの開発環境は次の通りです。
+Kodatunoの開発環境は次の通りです．
 
 <UL>
 <BR><LI>プログラミング言語<BR><BR>
-KodatunoはC++言語を用いて開発されていますので、C++プログラミング環境を各自で構築してください。<BR><BR>
+KodatunoはC++言語を用いて開発されていますので，C++プログラミング環境を各自で構築してください．<BR><BR>
   
 <BR><LI>OpenGL<BR><BR>
-KodatunoはOpenGL(GL/GLU/GLUT)を描画エンジンとして用いています。特にGLUTパッケージをインストール
-する必要があります。<BR><BR>
+KodatunoはOpenGL(GL/GLU/GLUT)を描画エンジンとして用いています．特にGLUTパッケージをインストール
+する必要があります．<BR><BR>
 
 <UL><LI>Windowsの場合<BR>
-GLUTをインターネットよりダウンロードし、glut.hを次に示すWide Studioをインストールしたフォルダの所定の場所
-(例えば、C:\Program Files\WideStudio\ws\include\gl)に置いて下さい。また、glut.dllをWindowsのシステムフォルダに
-置いて下さい。glutパッケージによっては、上記以外にmesa_wgl.hを必要とする場合があります。この場合は、
-同様にインターネットよりダウンロードの上、glut.hと同じフォルダに置いて下さい。<BR><BR>
+GLUTをインターネットよりダウンロードし，glut.hを次に示すWide Studioをインストールしたフォルダの所定の場所
+(例えば，C:\Program Files\WideStudio\ws\include\gl)に置いて下さい．また，glut.dllをWindowsのシステムフォルダに
+置いて下さい．glutパッケージによっては，上記以外にmesa_wgl.hを必要とする場合があります．この場合は，
+同様にインターネットよりダウンロードの上，glut.hと同じフォルダに置いて下さい．<BR><BR>
 </LI></UL>
 
 <BR><LI>Wide Studio<BR><BR>
-Kodatunoは平林俊一氏の開発されたウィンドウ作成アプリケーションを用いているため、WideStudioをインストール
-する必要があります。なお、Wide Studioのインストールパッケージにはコンパイル環境としてgccが付加されていますので、
-C++プログラミング環境を同時に取得することができます。<BR><BR>
+Kodatunoは平林俊一氏の開発されたウィンドウ作成アプリケーションを用いているため，WideStudioをインストール
+する必要があります．なお，Wide Studioのインストールパッケージにはコンパイル環境としてgccが付加されていますので，
+C++プログラミング環境を同時に取得することができます．<BR><BR>
 
 </UL>
 
