--- a/2-3.html
+++ b/2-3.html
@@ -29,9 +29,9 @@
 
 <BR><HR><H2>│╞ежегеєе╔ежд╬╠╛╛╬д╚╡б╟╜</H2>
 
-Kodatunoд╬еседеє▓ш╠╠╡┌д╙│╞еведе│еєд╬└т╠└дЄ▓╝┐▐д╦╝ид╖д▐д╣бг<BR>
-W/S Verд╟д╧бве░еще╒еге├еп╔┴▓ш╬╬░шд╦▓├дибв╝яб╣д╬┴р║юеведе│еєдфе│еєе╜б╝еыдм═╤░╒д╡дьд╞ддд▐д╣бг<BR>
-N/G Verд╟д╧бве╖еєе╫еыд╩е░еще╒еге├еп╔┴▓ш╬╬░шд╚бв┤╩░╫есе╦ехб╝┴к┬Є▓ш╠╠дм═╤░╒д╡дьд╞дддыд╬д▀д╟д╣бг<BR>
+Kodatunoд╬еседеє▓ш╠╠╡┌д╙│╞еведе│еєд╬└т╠└дЄ▓╝┐▐д╦╝ид╖д▐д╣бе<BR>
+W/S Verд╟д╧бде░еще╒еге├еп╔┴▓ш╬╬░шд╦▓├дибд╝яб╣д╬┴р║юеведе│еєдфе│еєе╜б╝еыдм═╤░╒д╡дьд╞ддд▐д╣бе<BR>
+N/G Verд╟д╧бде╖еєе╫еыд╩е░еще╒еге├еп╔┴▓ш╬╬░шд╚бд┤╩░╫есе╦ехб╝┴к┬Є▓ш╠╠дм═╤░╒д╡дьд╞дддыд╬д▀д╟д╣бе<BR>
 
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/OverView.jpg"></CENTER></P>
@@ -51,10 +51,10 @@ N/G Verд╟д╧бве╖еєе╫еыд╩е░еще╒еге├еп╔┴▓ш╬╬░шд╚бв┤╩░╫есе╦ехб╝┴к┬Є▓ш╠╠дм═╤░╒д╡дьд╞д
 
 <UL>
 <LI>е░еще╒еге├еп╔┴▓ш╬╬░ш<BR><BR>
-╞╔д▀╣■д▐дьд┐IGESд▐д┐д╧STLе╟б╝е┐дм╔┴▓шд╡дьд▐д╣бгKodatunoд╟д╧бвд│дьдщ╬й┬╬е╟б╝е┐д╬д│д╚дЄ
-Bodyд╚╕╞д╙д▐д╣бг<BR>
-д│д╬е░еще╒еге├еп╔┴▓ш╬╬░ш╞тд╟е▐еже╣/енб╝е▄б╝е╔┴р║юдЄ╣╘джд│д╚д╦дшдъбв░╩▓╝д╦╝ид╣┴р║юдм▓─╟╜д╟д╣бг
-N/G Verд╚W/S Verд╟┴р║юдм░█д╩дъд▐д╣д╬д╟├э░╒д╖д╞дпд└д╡ддбг<BR><BR>
+╞╔д▀╣■д▐дьд┐IGESд▐д┐д╧STLе╟б╝е┐дм╔┴▓шд╡дьд▐д╣беKodatunoд╟д╧бдд│дьдщ╬й┬╬е╟б╝е┐д╬д│д╚дЄ
+Bodyд╚╕╞д╙д▐д╣бе<BR>
+д│д╬е░еще╒еге├еп╔┴▓ш╬╬░ш╞тд╟е▐еже╣/енб╝е▄б╝е╔┴р║юдЄ╣╘джд│д╚д╦дшдъбд░╩▓╝д╦╝ид╣┴р║юдм▓─╟╜д╟д╣бе
+N/G Verд╚W/S Verд╟┴р║юдм░█д╩дъд▐д╣д╬д╟├э░╒д╖д╞дпд└д╡ддбе<BR><BR>
 
 ббa) │╚┬ч ----- Ctrl+┐┐дє├це╔еще├е░д╟▒ж╩¤╕■д╪е▐еже╣дЄ░▄╞░<BR>
 ббb) ╜╠╛о ----- Ctrl+┐┐дє├це╔еще├е░д╟║╕╩¤╕■д╪е▐еже╣дЄ░▄╞░<BR>
@@ -66,19 +66,19 @@ N/G Verд╚W/S Verд╟┴р║юдм░█д╩дъд▐д╣д╬д╟├э░╒д╖д╞дпд└д╡ддбг<BR><BR>
 
 
 <BR><BR><LI>е░еще╒еге├еп┴р║юеведе│еє<BR><BR>
-╛х┐▐д╦╝ид╣дшджд╩бв╝яб╣д╬е░еще╒еге├еп┴р║юдм▓─╟╜д╟д╣бг<BR>
+╛х┐▐д╦╝ид╣дшджд╩бд╝яб╣д╬е░еще╒еге├еп┴р║юдм▓─╟╜д╟д╣бе<BR>
 
 <BR><BR><LI>Bodyд╬╞╔д▀╣■д▀╡┌д╙║я╜№<BR><BR>
-ббN/G Verд╟д╧бв╝┬╣╘е╒ебедеыдЄ╝┬╣╘╕хбве│еєе╜б╝еы▓ш╠╠д╟╞╔д▀╣■д▀д┐ддIGES/STLе╒ебедеы╠╛дЄ╞■╬╧д╖д▐д╣бг<BR>
-ббW/S Verд╟д╧бв"Open"е▄е┐еєдЄ▓б▓╝д╣дыд│д╚д╦дшдъбвIGESбвSTLе╒ебедеы┴к┬Єе└едевеэе░дм│лднд▐д╣бг
-IGESдвдыддд╧STLе╒ебедеыдЄ┴к┬Єд╣дыд╚бве░еще╒еге├еп╔┴▓ш╬╬░шд╦┴к┬Єд╡дьд┐Bodyдм╔┴▓шд╡дьд▐д╣бг
-д▐д┐бв┴к┬Єд╖д┐Body╠╛дмBody╠╛╔╜╝и▓ш╠╠д╦╔╜╝ид╡дьд▐д╣бг╞╔д▀╣■дсдыBodyд╬┐Їд╧║╟┬ч8д─д╟д╣бг
-╔┴▓шд╡дьд╞дддыBodyдЄ┴к┬Єд╖бв"Delete"е▄е┐еєдЄ▓бд╣д╚бв┴к┬Єд╡дьд┐Bodyдм║я╜№д╡дьд▐д╣бг<BR>
+ббN/G Verд╟д╧бд╝┬╣╘е╒ебедеыдЄ╝┬╣╘╕хбде│еєе╜б╝еы▓ш╠╠д╟╞╔д▀╣■д▀д┐ддIGES/STLе╒ебедеы╠╛дЄ╞■╬╧д╖д▐д╣бе<BR>
+ббW/S Verд╟д╧бд"Open"е▄е┐еєдЄ▓б▓╝д╣дыд│д╚д╦дшдъбдIGESбдSTLе╒ебедеы┴к┬Єе└едевеэе░дм│лднд▐д╣бе
+IGESдвдыддд╧STLе╒ебедеыдЄ┴к┬Єд╣дыд╚бде░еще╒еге├еп╔┴▓ш╬╬░шд╦┴к┬Єд╡дьд┐Bodyдм╔┴▓шд╡дьд▐д╣бе
+д▐д┐бд┴к┬Єд╖д┐Body╠╛дмBody╠╛╔╜╝и▓ш╠╠д╦╔╜╝ид╡дьд▐д╣бе╞╔д▀╣■дсдыBodyд╬┐Їд╧║╟┬ч8д─д╟д╣бе
+╔┴▓шд╡дьд╞дддыBodyдЄ┴к┬Єд╖бд"Delete"е▄е┐еєдЄ▓бд╣д╚бд┴к┬Єд╡дьд┐Bodyдм║я╜№д╡дьд▐д╣бе<BR>
 
 <BR><BR><LI>ецб╝е╢б╝═╤е▄е┐еє<BR><BR>
-д│д╬е▄е┐еєд╧ецб╝е╢б╝дм╞╚╝лд╦└▀─ъ▓─╟╜д╩е▄е┐еєд╟д╣бг░╩▓╝д╬2╝я╬рд╬е▄е┐еєдм═╤░╒д╡дьд╞ддд▐д╣бг<BR><BR>
+д│д╬е▄е┐еєд╧ецб╝е╢б╝дм╞╚╝лд╦└▀─ъ▓─╟╜д╩е▄е┐еєд╟д╣бе░╩▓╝д╬2╝я╬рд╬е▄е┐еєдм═╤░╒д╡дьд╞ддд▐д╣бе<BR><BR>
 <UL>
-<LI>"User Status"е▄е┐еєбжбжбжбжбжд│д╬е▄е┐еєдЄ▓бд╣д╚бв▓╝┐▐д╦╝ид╣е└едевеэе░дм╔╜╝ид╡дьд▐д╣бг
+<LI>"User Status"е▄е┐еєбжбжбжбжбжд│д╬е▄е┐еєдЄ▓бд╣д╚бд▓╝┐▐д╦╝ид╣е└едевеэе░дм╔╜╝ид╡дьд▐д╣бе
 
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/UserStatus.jpg"></CENTER></P>
@@ -86,18 +86,18 @@ IGESдвдыддд╧STLе╒ебедеыдЄ┴к┬Єд╣дыд╚бве░еще╒еге├еп╔┴▓ш╬╬░шд╦┴к┬Єд╡дьд┐Bodyдм╔┴▓шд
 б╬User Status е└едевеэе░б╧
 </CENTER></P>
 
-"Mode"дф"Prop"д╚дддж╠╛┴░д╦д╧╞├д╦░╒╠гд╧двдъд▐д╗дєбг15╕─д╬еще╕еке▄е┐еєд╚15╕─д╬┐Ї├═дм
+"Mode"дф"Prop"д╚дддж╠╛┴░д╦д╧╞├д╦░╒╠гд╧двдъд▐д╗дєбе15╕─д╬еще╕еке▄е┐еєд╚15╕─д╬┐Ї├═дм
 ╕х(<A HREF="./2-6.html">2-6.е╡еєе╫еыеве╫еъе▒б╝е╖ечеєд╬е╜б╝е╣▓Є└т</A>)д╟└т╠└д╣ды
-User Functionд╦░·┐Їд╚д╖д╞═┐дидыд│д╚дмд╟днд▐д╣бгд─д▐дъбвецб╝е╢б╝╞╚╝лд╬еве╫еъе▒б╝е╖ечеєдЄ║ю└од╖д┐
-╛ь╣чд╬╞■╬╧едеєе┐б╝е╒езб╝е╣дЄд│дьд╦дшд├д╞─є╢бд╖д╞ддд▐д╣бг<BR><BR>
+User Functionд╦░·┐Їд╚д╖д╞═┐дидыд│д╚дмд╟днд▐д╣бед─д▐дъбдецб╝е╢б╝╞╚╝лд╬еве╫еъе▒б╝е╖ечеєдЄ║ю└од╖д┐
+╛ь╣чд╬╞■╬╧едеєе┐б╝е╒езб╝е╣дЄд│дьд╦дшд├д╞─є╢бд╖д╞ддд▐д╣бе<BR><BR>
 
-<LI>"User Func"е▄е┐еєбжбжбжбжбж5д─д╬"User Func"е▄е┐еєдмдвдъд▐д╣бгд│дьдщдт┴░╜╥д╬"User Status"д╚╞▒══бв
-ецб╝е╢б╝дм╝л═│д╦бв│╞е▄е┐еєдЄ▓бд╖д┐╛ь╣чд╬╜ш═¤дЄ│фдъ┼Ўд╞дыд│д╚дмд╟днд▐д╣бг
+<LI>"User Func"е▄е┐еєбжбжбжбжбж5д─д╬"User Func"е▄е┐еєдмдвдъд▐д╣бед│дьдщдт┴░╜╥д╬"User Status"д╚╞▒══бд
+ецб╝е╢б╝дм╝л═│д╦бд│╞е▄е┐еєдЄ▓бд╖д┐╛ь╣чд╬╜ш═¤дЄ│фдъ┼Ўд╞дыд│д╚дмд╟днд▐д╣бе
 </UL>
 
 <BR><BR><LI>е│еєе╜б╝еы<BR><BR>
-│╞╝яесе├е╗б╝е╕д╬╔╜╝идфбве│е▐еєе╔д╬╞■╬╧дм▓─╟╜д╟д╣бге│е▐еєе╔д╬╝я╬рд╦┤╪д╖д╞д╧╝бд╬
-<A HREF="2-4.html">2.4 │╞е│е▐еєе╔д╬╠╛╛╬д╚╡б╟╜</A>дЄ╗▓╛╚д╖д╞дпд└д╡ддбг<BR><BR>
+│╞╝яесе├е╗б╝е╕д╬╔╜╝идфбде│е▐еєе╔д╬╞■╬╧дм▓─╟╜д╟д╣бее│е▐еєе╔д╬╝я╬рд╦┤╪д╖д╞д╧╝бд╬
+<A HREF="2-4.html">2.4 │╞е│е▐еєе╔д╬╠╛╛╬д╚╡б╟╜</A>дЄ╗▓╛╚д╖д╞дпд└д╡ддбе<BR><BR>
 </UL>
 </UL><BR><BR>
 
@@ -115,8 +115,8 @@ User Functionд╦░·┐Їд╚д╖д╞═┐дидыд│д╚дмд╟днд▐д╣бгд─д▐дъбвецб╝е╢б╝╞╚╝лд╬еве╫еъе▒б╝е
 ббg) есе╦ехб╝╔╜╝и --- ▒жепеъе├еп<BR>
 
 <BR><BR><LI>есе╦ехб╝<BR><BR>
-▒жепеъе├епд╦дшдъесе╦ехб╝дЄ╔╜╝ид╡д╗дыд│д╚дмд╟днд▐д╣бг<BR><BR>
-ббa) Execute User Function ----- ецб╝е╢б╝дм╞╚╝лд╦║ю└од╖д┐е╫еэе░ещердЄ┼╨╧┐д╖бв╝┬╣╘д╣дыд│д╚дмд╟днд▐д╣<BR>
+▒жепеъе├епд╦дшдъесе╦ехб╝дЄ╔╜╝ид╡д╗дыд│д╚дмд╟днд▐д╣бе<BR><BR>
+ббa) Execute User Function ----- ецб╝е╢б╝дм╞╚╝лд╦║ю└од╖д┐е╫еэе░ещердЄ┼╨╧┐д╖бд╝┬╣╘д╣дыд│д╚дмд╟днд▐д╣<BR>
 ббb) Selection Cancel ----- е╗еьепе╖ечеєдЄенеуеєе╗еыд╖д▐д╣<BR>
 ббc) Draw BODY ON/OFF ----- ете╟еыд╬╔╜╝и/╚є╔╜╝идЄ└┌дъ┬╪дид▐д╣<BR>
 ббd) Draw Sraface ON/OFF ----- еяедефб╝е╒еьб╝ер╔╜╝и/е╜еъе├е╔╔╜╝идЄ└┌дъ┬╪дид▐д╣<BR>
