--- a/2-4.html
+++ b/2-4.html
@@ -28,53 +28,55 @@
 <blockquote> 
 
 <BR><HR><H2>W/S Versionдм╗¤д─╡б╟╜</H2>
-W/S Versionд╟д╧бвдвдщдлд╕дс╝яб╣д╬╡б╟╜дм═╤░╒д╡дьд╞дкдъбв
-Kodatunoе│еєе╜б╝еыд╦┼╨╧┐д╡дьд┐е│е▐еєе╔дЄ╞■╬╧д╣дыд│д╚д╦дшдъбв╜ъ─ъд╬╡б╟╜дЄ╝┬╣╘д╣дыд│д╚дмд╟днд▐д╣бг
-┼╨╧┐д╡дьд╞дддые│е▐еєе╔дЄ░╩▓╝д╦╝ид╖д▐д╣бг<BR><BR>
+W/S Versionд╟д╧бддвдщдлд╕дс╝яб╣д╬╡б╟╜дм═╤░╒д╡дьд╞дкдъбд
+Kodatunoе│еєе╜б╝еыд╦┼╨╧┐д╡дьд┐е│е▐еєе╔дЄ╞■╬╧д╣дыд│д╚д╦дшдъбд╜ъ─ъд╬╡б╟╜дЄ╝┬╣╘д╣дыд│д╚дмд╟днд▐д╣бе
+┼╨╧┐д╡дьд╞дддые│е▐еєе╔дЄ░╩▓╝д╦╝ид╖д▐д╣бе<BR><BR>
 <UL>
 <LI>verinf -f<BR><BR>
-е╨б╝е╕ечеє╛Ё╩єдЄе│еєе╜б╝еыд╦╜╨╬╧д╖д▐д╣бг<BR>
-░·┐ЇfдЄ╗╪─ъд╣дыд╚бвkodatunoд╬└╡╝░╠╛╛╬дЄ╜╨╬╧д╖д▐д╣бг<BR><BR>
+е╨б╝е╕ечеє╛Ё╩єдЄе│еєе╜б╝еыд╦╜╨╬╧д╖д▐д╣бе<BR>
+░·┐ЇfдЄ╗╪─ъд╣дыд╚бдkodatunoд╬└╡╝░╠╛╛╬дЄ╜╨╬╧д╖д▐д╣бе<BR><BR>
 
 <LI>open -N (File Name)<BR><BR>
-IGES/STLекб╝е╫еєе└едевеэе░дЄ╔╜╝ид╖д▐д╣бг<BR>
-░·┐ЇNдЄ╗╪─ъд╣дыд╚бвд╜д╬╕хд╦╗╪─ъд╖д┐File Nameд╬е╟б╝е┐дЄе└едевеэе░дЄ╔╜╝ид╣дыд│д╚д╩дп╝ш╞└д╣дыд│д╚дмд╟днд▐д╣бг<BR><BR>
+IGES/STLекб╝е╫еєе└едевеэе░дЄ╔╜╝ид╖д▐д╣бе<BR>
+░·┐ЇNдЄ╗╪─ъд╣дыд╚бдд╜д╬╕хд╦╗╪─ъд╖д┐File Nameд╬е╟б╝е┐дЄе└едевеэе░дЄ╔╜╝ид╣дыд│д╚д╩дп╝ш╞└д╣дыд│д╚дмд╟днд▐д╣бе<BR><BR>
 
 <LI>wire<BR><BR>
-┴к┬Єд╡дьд┐BodyдЄеяедефб╝е╒еьб╝ерд╟╔╜╝ид╖д▐д╣бг<BR>
+┴к┬Єд╡дьд┐BodyдЄеяедефб╝е╒еьб╝ерд╟╔╜╝ид╖д▐д╣бе<BR>
 ░·┐Їбзд╩д╖<BR><BR>
 
 <LI>scale -r (Value)<BR><BR>
-╕╜║▀д╬е░еще╒еге├епд╬╔┴▓ше╣е▒б╝еыдЄ╜╨╬╧д╖д▐д╣бг<BR>
-░·┐ЇrдЄ╗╪─ъд╣дыд╚бвValueд╟╗╪─ъд╖д┐├═д╬е╣е▒б╝еыд╦╩╤╣╣д╖д▐д╣бг<BR><BR>
+╕╜║▀д╬е░еще╒еге├епд╬╔┴▓ше╣е▒б╝еыдЄ╜╨╬╧д╖д▐д╣бе<BR>
+░·┐ЇrдЄ╗╪─ъд╣дыд╚бдValueд╟╗╪─ъд╖д┐├═д╬е╣е▒б╝еыд╦╩╤╣╣д╖д▐д╣бе<BR><BR>
 
 <LI>tol -r (Value)<BR><BR>
-╕╜║▀д╬╔┴▓шд╬└║┼┘(е╚еьещеєе╣)дЄ╜╨╬╧д╖д▐д╣бг<BR>
-░·┐ЇrдЄ╗╪─ъд╣дыд╚бвValueд╟╗╪─ъд╖д┐├═д╬е╚еьещеєе╣д╦╩╤╣╣д╖д▐д╣бг╗╪─ъд╟дндые╚еьещеєе╣├═д╧1░╩╛хд╟бв
-├═дм╛од╡дд╩¤дм╣т└║┼┘д╩╔┴▓шд╚д╩дъд▐д╣бге╟е╒ейеые╚├═д╧20д╟д╣бг<BR><BR>
+╕╜║▀д╬╔┴▓шд╬└║┼┘(е╚еьещеєе╣)дЄ╜╨╬╧д╖д▐д╣бе<BR>
+░·┐ЇrдЄ╗╪─ъд╣дыд╚бдValueд╟╗╪─ъд╖д┐├═д╬е╚еьещеєе╣д╦╩╤╣╣д╖д▐д╣бе╗╪─ъд╟дндые╚еьещеєе╣├═д╧1░╩╛хд╟бд
+├═дм╛од╡дд╩¤дм╣т└║┼┘д╩╔┴▓шд╚д╩дъд▐д╣бее╟е╒ейеые╚├═д╧20д╟д╣бе<BR><BR>
 
 <LI>cpview<BR><BR>
-е│еєе╚еэб╝еые▌едеєе╚дЄ╔┴▓шд╖д▐д╣бг<BR>
+е│еєе╚еэб╝еые▌едеєе╚дЄ╔┴▓шд╖д▐д╣бе<BR>
 ░·┐Їбзд╩д╖<BR><BR>
 
 <LI>surfinfo<BR><BR>
-╢╩╠╠╛Ё╩єдЄе│еєе╜б╝еыд╦╜╨╬╧д╖д▐д╣бг
+╢╩╠╠╛Ё╩єдЄе│еєе╜б╝еыд╦╜╨╬╧д╖д▐д╣бе
 ░·┐Їбзд╩д╖<BR><BR>
 
 <LI>exp -r (Value)<BR><BR>
-░·┐ЇrдЄ╗╪─ъд╣дыд╚бвValueд╟╗╪─ъд╖д┐╟▄╬ид╟BODYдЄ│╚┬чбж╜╠╛од╖д▐д╣бг<BR><BR>
+░·┐ЇrдЄ╗╪─ъд╣дыд╚бдValueд╟╗╪─ъд╖д┐╟▄╬ид╟BODYдЄ│╚┬чбж╜╠╛од╖д▐д╣бе<BR><BR>
 
 <LI>move -r (Value_X) (Value_Y) (Value_Z)<BR><BR>
-░·┐ЇrдЄ╗╪─ъд╣дыд╚бвValueд╟╗╪─ъд╖д┐░▄╞░╬╠д└д▒д╟BODYдЄ╩┐╣╘░▄╞░д╖д▐д╣бг<BR><BR>
+░·┐ЇrдЄ╗╪─ъд╣дыд╚бдValueд╟╗╪─ъд╖д┐░▄╞░╬╠д└д▒д╟BODYдЄ╩┐╣╘░▄╞░д╖д▐д╣бе<BR><BR>
 
+<LI>chbkcol -r (Value_R) (Value_G) (Value_B)<BR><BR>
+░·┐ЇrдЄ╗╪─ъд╣дыд╚бд╟╪╖╩┐здЄValueд╟╗╪─ъд╖д┐RGB├═д╬┐зд╪д╚╩╤╣╣д╖д▐д╣бе<BR><BR>
 
 <LI>rots<BR><BR>
-▓є┼╛е╡б╝е╒езе╣дЄ└╕└од╖д▐д╣бг
-1д─д╬╢╩└■дЄ┴к┬Є╕хбвд│д╬е│е▐еєе╔дЄ╞■╬╧д╖д▐д╣бг<BR>
-▓є┼╛е╡б╝е╒езе╣└╕└ое└едевеэе░дм╔╜╝ид╡дьд▐д╣д╬д╟бв╜ъ─ъд╬е╤ещесб╝е┐дЄ╞■╬╧д╖"OK"е▄е┐еєд╟бв
-┴к┬Єд╖д┐╢╩└■дЄ360┼┘▓є┼╛д╡д╗д┐╢╩╠╠дм└╕└од╡дьд▐д╣бгд▐д┐д╬д│д╚днбв"NewBody"д╚дддж
-╠╛┴░д╟└╕└од╖д┐NURBS╢╩╠╠дмBodyд╚д╖д╞┐╖д┐д╦┼╨╧┐д╡дьд▐д╣бгд┐д└д╖бвR1.1╕╜║▀бв▓є┼╛│╤┼┘д╧360┼┘д╬д▀┬╨▒■д╖д╞дддыбг<BR>
-░·┐Їбзд╩д╖бг<BR><BR>
+▓є┼╛е╡б╝е╒езе╣дЄ└╕└од╖д▐д╣бе
+1д─д╬╢╩└■дЄ┴к┬Є╕хбдд│д╬е│е▐еєе╔дЄ╞■╬╧д╖д▐д╣бе<BR>
+▓є┼╛е╡б╝е╒езе╣└╕└ое└едевеэе░дм╔╜╝ид╡дьд▐д╣д╬д╟бд╜ъ─ъд╬е╤ещесб╝е┐дЄ╞■╬╧д╖"OK"е▄е┐еєд╟бд
+┴к┬Єд╖д┐╢╩└■дЄ360┼┘▓є┼╛д╡д╗д┐╢╩╠╠дм└╕└од╡дьд▐д╣бед▐д┐д╬д│д╚днбд"NewBody"д╚дддж
+╠╛┴░д╟└╕└од╖д┐NURBS╢╩╠╠дмBodyд╚д╖д╞┐╖д┐д╦┼╨╧┐д╡дьд▐д╣бед┐д└д╖бдR1.1╕╜║▀бд▓є┼╛│╤┼┘д╧360┼┘д╬д▀┬╨▒■д╖д╞дддыбе<BR>
+░·┐Їбзд╩д╖бе<BR><BR>
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/Rots.jpg"></CENTER></P>
 <BR>
@@ -82,11 +84,11 @@ IGES/STLекб╝е╫еєе└едевеэе░дЄ╔╜╝ид╖д▐д╣бг<BR>
 </CENTER></P>
 
 <LI>sweeps<BR><BR>
-е╣едб╝е╫е╡б╝е╒езе╣дЄ└╕└од╖д▐д╣бг<BR>
-1д─д╬╢╩└■дЄ┴к┬Є╕хбвд│д╬е│е▐еєе╔дЄ╞■╬╧д╖д▐д╣бг
-е╣едб╝е╫е╡б╝е╒езе╣└╕└ое└едевеэе░дм╔╜╝ид╡дьд▐д╣д╬д╟бв╜ъ─ъд╬е╤ещесб╝е┐дЄ╞■╬╧д╖"OK"е▄е┐еєд╟бв
-┴к┬Єд╖д┐╢╩└■дЄе╣едб╝е╫д╡д╗д┐╢╩╠╠дм└╕└од╡дьд▐д╣бг<BR>
-░·┐Їбзд╩д╖бг<BR><BR>
+е╣едб╝е╫е╡б╝е╒езе╣дЄ└╕└од╖д▐д╣бе<BR>
+1д─д╬╢╩└■дЄ┴к┬Є╕хбдд│д╬е│е▐еєе╔дЄ╞■╬╧д╖д▐д╣бе
+е╣едб╝е╫е╡б╝е╒езе╣└╕└ое└едевеэе░дм╔╜╝ид╡дьд▐д╣д╬д╟бд╜ъ─ъд╬е╤ещесб╝е┐дЄ╞■╬╧д╖"OK"е▄е┐еєд╟бд
+┴к┬Єд╖д┐╢╩└■дЄе╣едб╝е╫д╡д╗д┐╢╩╠╠дм└╕└од╡дьд▐д╣бе<BR>
+░·┐Їбзд╩д╖бе<BR><BR>
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/Sweeps.jpg"></CENTER></P>
 <BR>
@@ -95,13 +97,13 @@ IGES/STLекб╝е╫еєе└едевеэе░дЄ╔╜╝ид╖д▐д╣бг<BR>
 
 
 <LI>nurbsc<BR><BR>
-NURBS╢╩└■дЄ└╕└од╖д▐д╣бг<BR>
-д│д╬е│е▐еєе╔дЄ╞■╬╧д╣дыд╚бвNURBS╢╩└■└╕└ое└едевеэе░дм╔╜╝ид╡дьд▐д╣д╬д╟бв└╕└од╖д┐ддNURBS╢╩└■д╬╝я╬р╡┌д╙бв
-Inputе╒ебедеыдЄ┴к┬Єд╖бв"OK"е▄е┐еєдЄ▓бд╣д╚бв1д─д╬NURBS╢╩└■дм└╕└од╡дьд▐д╣бгд▐д┐д╬д│д╚днбв"NewBody_C"д╚дддж
-╠╛┴░д╟└╕└од╖д┐NURBS╢╩└■дмBodyд╚д╖д╞┐╖д┐д╦┼╨╧┐д╡дьд▐д╣бг<BR>
-Inputе╒ебедеыд╧бв└й╕ц┼└д╬x-y-z║┬╔╕дЄ1╣╘д╚д╖д╞┼└┐Ї╩м╡н╜╥д╖д▐д╣бге╒ебедеы╖┴╝░д╧CSV╖┴╝░д╚д╖бве╒ебедеы│╚─е╗╥д╧
-".inp"д╚д╖д▐д╣бге╡еєе╫еыInputе╒ебедеыдм"Kodatuno_R***\Input\NurbsC"д╦двдъд▐д╣бг<BR>
-░·┐Їбзд╩д╖бг<BR><BR>
+NURBS╢╩└■дЄ└╕└од╖д▐д╣бе<BR>
+д│д╬е│е▐еєе╔дЄ╞■╬╧д╣дыд╚бдNURBS╢╩└■└╕└ое└едевеэе░дм╔╜╝ид╡дьд▐д╣д╬д╟бд└╕└од╖д┐ддNURBS╢╩└■д╬╝я╬р╡┌д╙бд
+Inputе╒ебедеыдЄ┴к┬Єд╖бд"OK"е▄е┐еєдЄ▓бд╣д╚бд1д─д╬NURBS╢╩└■дм└╕└од╡дьд▐д╣бед▐д┐д╬д│д╚днбд"NewBody_C"д╚дддж
+╠╛┴░д╟└╕└од╖д┐NURBS╢╩└■дмBodyд╚д╖д╞┐╖д┐д╦┼╨╧┐д╡дьд▐д╣бе<BR>
+Inputе╒ебедеыд╧бд└й╕ц┼└д╬x-y-z║┬╔╕дЄ1╣╘д╚д╖д╞┼└┐Ї╩м╡н╜╥д╖д▐д╣бее╒ебедеы╖┴╝░д╧CSV╖┴╝░д╚д╖бде╒ебедеы│╚─е╗╥д╧
+".inp"д╚д╖д▐д╣бее╡еєе╫еыInputе╒ебедеыдм"Kodatuno_R***\Input\NurbsC"д╦двдъд▐д╣бе<BR>
+░·┐Їбзд╩д╖бе<BR><BR>
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/Nurbsc.jpg"></CENTER></P>
 <BR>
@@ -109,11 +111,11 @@ Inputе╒ебедеыд╧бв└й╕ц┼└д╬x-y-z║┬╔╕дЄ1╣╘д╚д╖д╞┼└┐Ї╩м╡н╜╥д╖д▐д╣бге╒ебедеы╖┴╝░д╧CSV
 </CENTER></P>
 
 <LI>nurbss<BR><BR>
-NURBS╢╩╠╠дЄ└╕└од╖д▐д╣бг<BR>
-д│д╬е│е▐еєе╔дЄ╞■╬╧д╣дыд╚бвNURBS╢╩╠╠└╕└ое└едевеэе░дм╔╜╝ид╡дьд▐д╣бг└╕└од╖д┐ддNURBS╢╩╠╠д╬╝я╬р╡┌д╙бв
-Inputе╒ебедеыдЄ┴к┬Єд╖бв"OK"е▄е┐еєдЄ▓бд╣д╚бв1д─д╬NURBS╢╩╠╠дм└╕└од╡дьд▐д╣бгд▐д┐д╬д│д╚днбв"NewBody_S"д╚дддж
-╠╛┴░д╟└╕└од╖д┐NURBS╢╩╠╠дмBodyд╚д╖д╞┐╖д┐д╦┼╨╧┐д╡дьд▐д╣бг
-░·┐Їбзд╩д╖бг<BR><BR>
+NURBS╢╩╠╠дЄ└╕└од╖д▐д╣бе<BR>
+д│д╬е│е▐еєе╔дЄ╞■╬╧д╣дыд╚бдNURBS╢╩╠╠└╕└ое└едевеэе░дм╔╜╝ид╡дьд▐д╣бе└╕└од╖д┐ддNURBS╢╩╠╠д╬╝я╬р╡┌д╙бд
+Inputе╒ебедеыдЄ┴к┬Єд╖бд"OK"е▄е┐еєдЄ▓бд╣д╚бд1д─д╬NURBS╢╩╠╠дм└╕└од╡дьд▐д╣бед▐д┐д╬д│д╚днбд"NewBody_S"д╚дддж
+╠╛┴░д╟└╕└од╖д┐NURBS╢╩╠╠дмBodyд╚д╖д╞┐╖д┐д╦┼╨╧┐д╡дьд▐д╣бе
+░·┐Їбзд╩д╖бе<BR><BR>
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/Nurbss.jpg"></CENTER></P>
 <BR>
@@ -121,9 +123,9 @@ Inputе╒ебедеыдЄ┴к┬Єд╖бв"OK"е▄е┐еєдЄ▓бд╣д╚бв1д─д╬NURBS╢╩╠╠дм└╕└од╡дьд▐д╣бгд▐д┐д╬д
 </CENTER></P>
 
 <LI>chrank -r (Value_U) (Value_V)<BR><BR>
-░·┐ЇrдЄ╗╪─ъд╣дыд╚бвValueд╟╗╪─ъд╖д┐│м┐Їд╬╢╩╠╠д╪д╚╩╤╣╣д╖д▐д╣бг
-╕╜╗■┼└д╟д╧╢╩╠╠д╬д▀д╪д╬┬╨▒■д╚д╩д├д╞ддд▐д╣бг
-│м┐ЇдЄ╛хд▓ды╛ь╣чд╧├э░╒дм╔м═╫д╟д╣бг│м┐Їд╧е│еєе╚еэб╝еые▌едеєе╚д╬┐Їд╦░═┬╕д╖д▐д╣бг<BR><BR>
+░·┐ЇrдЄ╗╪─ъд╣дыд╚бдValueд╟╗╪─ъд╖д┐│м┐Їд╬╢╩╠╠д╪д╚╩╤╣╣д╖д▐д╣бе
+╕╜╗■┼└д╟д╧╢╩╠╠д╬д▀д╪д╬┬╨▒■д╚д╩д├д╞ддд▐д╣бе
+│м┐ЇдЄ╛хд▓ды╛ь╣чд╧├э░╒дм╔м═╫д╟д╣бе│м┐Їд╧е│еєе╚еэб╝еые▌едеєе╚д╬┐Їд╦░═┬╕д╖д▐д╣бе<BR><BR>
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/chrank.jpg"></CENTER></P>
 <BR>
@@ -131,9 +133,9 @@ Inputе╒ебедеыдЄ┴к┬Єд╖бв"OK"е▄е┐еєдЄ▓бд╣д╚бв1д─д╬NURBS╢╩╠╠дм└╕└од╡дьд▐д╣бгд▐д┐д╬д
 </CENTER></P>
 
 <BR><BR>
-виN/G Versionд╟д╧бвд│дьдщд╬е│е▐еєе╔д╧═╤░╒д╡дьд╞ддд▐д╗дєдмбв<A HREF="1-2.html">1.2  │м┴╪╣╜┬д </A>д╟╝ид╖д┐дшджд╦бв
-Kodatunoд╟д╧GUI╔Їд╚GE╔Їдм╞╚╬йд╖д╞дддыд┐дсбв╛х╡нд╬┴р║юд╬╞тбвNURBS╢╩╠╠/╢╩└■д╬└╕└од╦┤╪д╖д╞д╧
-GE╔Їдм═╤░╒д╣ды┤╪┐Їд╚д╖д╞═╤░╒д╡дьд╞ддд▐д╣бг
+виN/G Versionд╟д╧бдд│дьдщд╬е│е▐еєе╔д╧═╤░╒д╡дьд╞ддд▐д╗дєдмбд<A HREF="1-2.html">1.2  │м┴╪╣╜┬д </A>д╟╝ид╖д┐дшджд╦бд
+Kodatunoд╟д╧GUI╔Їд╚GE╔Їдм╞╚╬йд╖д╞дддыд┐дсбд╛х╡нд╬┴р║юд╬╞тбдNURBS╢╩╠╠/╢╩└■д╬└╕└од╦┤╪д╖д╞д╧
+GE╔Їдм═╤░╒д╣ды┤╪┐Їд╚д╖д╞═╤░╒д╡дьд╞ддд▐д╣бе
 
 
 
