--- a/3-1.html
+++ b/3-1.html
@@ -29,11 +29,11 @@
 
 <BR><HR><H2>ещеде╓ещеъ╣╜└о</H2>
 
-<A HREF="1-2.html">1.2  │м┴╪╣╜┬д </A>д╟╝ид╖д┐══д╦бвKodatunoд╧┬чдндп╩мд▒д╞3д─д╬│м┴╪(GE╔ЇбвGUI╔ЇбвUA╔Ї)д╦╩мдлдьд╞ддд▐д╣бг<BR><BR>
+<A HREF="1-2.html">1.2  │м┴╪╣╜┬д </A>д╟╝ид╖д┐══д╦бдKodatunoд╧┬чдндп╩мд▒д╞3д─д╬│м┴╪(GE╔ЇбдGUI╔ЇбдUA╔Ї)д╦╩мдлдьд╞ддд▐д╣бе<BR><BR>
 
 <UL>
 <BR><LI>GE╔Ї<BR><BR>
-ецб╝е╢б╝д╦─є╢бд╡дьды│╞╝яNURBS▒щ╗╗бв┐Ї├═▒щ╗╗бве╖е╣е╞ер┴р║юбв╔┴▓шбве╤б╝е╡б╝д╬ещеде╓ещеъ─ъ╡┴дЄ╣╘д├д╞ддд▐д╣бг<BR><BR>
+ецб╝е╢б╝д╦─є╢бд╡дьды│╞╝яNURBS▒щ╗╗бд┐Ї├═▒щ╗╗бде╖е╣е╞ер┴р║юбд╔┴▓шбде╤б╝е╡б╝д╬ещеде╓ещеъ─ъ╡┴дЄ╣╘д├д╞ддд▐д╣бе<BR><BR>
 
 буNURBS▒щ╗╗бф<BR>
 <UL>
@@ -53,14 +53,14 @@
 <LI>StdAfx.h
 <LI>Quaternion.cpp
 <LI>Quaternion.h
+<LI>SFQuant.cpp
+<LI>SFQuant.h
 </LI></UL>
 
-буBODY╔┴▓ш/┴р║юбф
+буBODY╔┴▓шбф
 <UL>
 <LI>Describe_BODY.cpp
 <LI>Describe_BODY.h
-<LI>BODY_Handler.cpp
-<LI>BODY_Handler.h
 </LI></UL>
 
 буе╖е╣е╞ер┴р║юбф
@@ -86,7 +86,7 @@
 </LI></UL><BR>
 
 <BR><LI>GUI╔Ї<BR><BR>
-WideStudioдм─є╢бд╣дыGUIещеде╓ещеъдЄ═╤ддд┐│╞╝яежегеєе╔еж╡┌д╙д│дьдщдлдщ╚п└╕д╣дыеде┘еєе╚е╫еэе╖б╝е╕еуд╬─ъ╡┴дЄ╣╘д├д╞ддд▐д╣бг<BR><BR>
+WideStudioдм─є╢бд╣дыGUIещеде╓ещеъдЄ═╤ддд┐│╞╝яежегеєе╔еж╡┌д╙д│дьдщдлдщ╚п└╕д╣дыеде┘еєе╚е╫еэе╖б╝е╕еуд╬─ъ╡┴дЄ╣╘д├д╞ддд▐д╣бе<BR><BR>
 <UL>
 <LI>Kodatuno.cpp
 <LI>Kodatuno_Win.cpp
@@ -104,24 +104,34 @@ WideStudioдм─є╢бд╣дыGUIещеде╓ещеъдЄ═╤ддд┐│╞╝яежегеєе╔еж╡┌д╙д│дьдщдлдщ╚п└╕д╣дыеде
 <LI>SweepSurfDlg_Proc.cpp
 <LI>User_StatDlg_Proc.cpp
 </LI></UL><BR>
-GUIдлдщ╚п└╕д╖д┐еде┘еєе╚дЄ╜ш═¤д╣ды┤╪┐Їд╦д╧└▄╚°╕ьд╚д╖д╞ProcдЄ╔╒▓├д╖д╞ддд▐д╣бгд│дьдще╫еэе╖б╝е╕еу╞тд╟е│б╝еыд╡дьды╜ш═¤д╬╝┬┬╬д╧е╖е╣е╞ер╔Ї
-Kodatuno_Main.cpp╞тд╦┴┤д╞╡н╜╥д╡дьд╞ддд▐д╣бг<BR><BR>
+GUIдлдщ╚п└╕д╖д┐еде┘еєе╚дЄ╜ш═¤д╣ды┤╪┐Їд╦д╧└▄╚°╕ьд╚д╖д╞ProcдЄ╔╒▓├д╖д╞ддд▐д╣бед│дьдще╫еэе╖б╝е╕еу╞тд╟е│б╝еыд╡дьды╜ш═¤д╬╝┬┬╬д╧е╖е╣е╞ер╔Ї
+Kodatuno_Main.cpp╞тд╦┴┤д╞╡н╜╥д╡дьд╞ддд▐д╣бе<BR><BR>
 
 <BR><LI>UA╔Ї<BR><BR>
-GE/GUIете╕ехб╝еыдЄUserдм═°═╤д╣дыд┐дсд╬е╓еъе├е╕д╚д╖д╞░╩▓╝д╬ещеде╓ещеъдЄ─є╢бд╖д╞ддд▐д╣бг<BR><BR>
+GE/GUIете╕ехб╝еыдЄUserдм═°═╤д╣дыд┐дсд╬е╓еъе├е╕д╚д╖д╞░╩▓╝д╬ещеде╓ещеъдЄ─є╢бд╖д╞ддд▐д╣бе<BR><BR>
 <UL>
 <LI>UserFunc.cpp
 <LI>UserFunc.h
 </LI></UL><BR><BR>
-д▐д┐бве╡еєе╫еыеве╫еъе▒б╝е╖ечеєд╚д╖д╞бв<BR><BR>
+д▐д┐бде╡еєе╫еыеве╫еъе▒б╝е╖ечеєд╚д╖д╞бд<BR><BR>
 <UL>
-<LI>UserFuncSub.cpp
-<LI>UserFuncSub.h
+<LI>SampleFunc1.cpp
+<LI>SampleFunc2.cpp
+<LI>SampleFunc.h
 </LI></UL><BR>
-дмдвдъд▐д╣бг
+дмдвдъд▐д╣бе<BR><BR>
 
-<BR><BR>
-вид╩дкбв╦▄Refereceд╟д╧бвWide Stduio╕╟═нд╬е╜б╝е╣е╒ебедеыд╟двдыбвKodatuno_Win.h╡┌д╙GeneralFile_Dlg.hд╦┤╪д╣ды└т╠└д╧╛╩╬мд╖д▐д╣бг
+<BR><LI>дкд▐д▒<BR><BR>
+д▐д└д▐д└│л╚п├цбе
+<UL>
+<LI>VRML_Parser.cpp
+<LI>VRME_Parser.h
+<LI>MESH.cpp
+<LI>MESH.h
+</LI></UL><BR><BR>
+
+
+вид╩дкбд╦▄Refereceд╟д╧бдWide Stduio╕╟═нд╬е╜б╝е╣е╒ебедеыд╟двдыбдKodatuno_Win.h╡┌д╙GeneralFile_Dlg.hд╦┤╪д╣ды└т╠└д╧╛╩╬мд╖д▐д╣бе
 
 </blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
 			<A HREF="./2-8.html">Prev</A>     
