--- a/3-9-1.html
+++ b/3-9-1.html
@@ -50,6 +50,11 @@
     <A target="func" HREF="3-9-2.html#GenSurface()"> GenSurface()</A><BR>
     <A target="func" HREF="3-9-2.html#GenNurbsCurve()"> GenNurbsCurve()</A><BR>
     <A target="func" HREF="3-9-2.html#GenNurbsSurface()"> GenNurbsSurface()</A><BR>
+    <A target="func" HREF="3-9-2.html#SearchBodyList()"> SearchBodyList()</A><BR>
+    <A target="func" HREF="3-9-2.html#GetSurfInfo()"> GetSurfInfo()</A><BR>
+    <A target="func" HREF="3-9-2.html#ChangeRank()"> ChangeRank()</A><BR>
+    <A target="func" HREF="3-9-2.html#ChangeBackColor()"> ChangeBackColor()</A><BR>
+   
     <A target="func" HREF="3-9-2.html#Describe_Main()"> Describe_Main()</A><BR>
     <A target="func" HREF="3-9-2.html#DrawBODY()"> DrawBODY()</A><BR>
     <A target="func" HREF="3-9-2.html#DrawAxis()"> DrawAxis()</A><BR>
