--- a/index.html
+++ b/index.html
@@ -49,8 +49,18 @@
 	<LI><A HREF="2-2.html">2.2  Kodatunoを動かしてみよう </A></LI>
 	<LI><A HREF="2-3.html">2.3  各ウィンドウの名称と機能 </A></LI>
 	<LI><A HREF="2-4.html">2.4  W/S Versionが持つ機能 </A></LI>
-	<LI><A HREF="2-5.html">2.5  サンプルアプリケーションの実行 (W/S Version) </A></LI>
-	<LI><A HREF="2-6.html">2.6  サンプルアプリケーションのソース解説 (W/S Version) </A></LI>
+	<LI><A HREF="2-5.html">2.5  サンプルアプリケーションの実行とソース解説 1 (W/S Version) </A></LI>
+	<LI><A HREF="2-6.html">2.6  サンプルアプリケーションの実行とソース解説 2 (W/S Version) </A></LI>
+	<UL>
+		<LI><A HREF="2-6-1.html">2.6.1 IGESファイルの読み込みとBodyへの登録  </A></LI>
+		<LI><A HREF="2-6-2.html">2.6.2 Bodyのアフィン変換  </A></LI>
+		<LI><A HREF="2-6-3.html">2.6.3 NURBS曲線を指定した分割数で分割した点を生成する  </A></LI>
+		<LI><A HREF="2-6-4.html">2.6.4 任意の点からのNURBS曲面上の最近傍点を求める  </A></LI>
+		<LI><A HREF="2-6-5.html">2.6.5 NURBS曲面を指定した分割数で分割した点を生成する  </A></LI>
+		<LI><A HREF="2-6-6.html">2.6.6 等高線を生成する  </A></LI>
+		<LI><A HREF="2-6-7.html">2.6.7 NURBS曲面同士の交線を算出する  </A></LI>
+		<LI><A HREF="2-6-8.html">2.6.8 平均曲率法線ベクトルを算出する  </A></LI>
+	</UL>
 	<LI><A HREF="2-7.html">2.7  簡単なアプリケーションの作成 (W/S Version) </A></LI>
 	<LI><A HREF="2-8.html">2.8  BODYListとOBJECTList </A></LI>
 	<LI><A HREF="2-9.html">2.9  その他 (W/S Version) </A></LI>
@@ -61,7 +71,7 @@
 <ul>
 	<LI><A HREF="3-1.html">3.1  ライブラリ構成 </A></LI>
 	<LI><A HREF="3-2.html">3.2  NURBS演算ライブラリ </A></LI>
-	<LI><A HREF="3-3.html">3.3  BODY描画/操作ライブラリ </A></LI>
+	<LI><A HREF="3-3.html">3.3  BODY描画ライブラリ </A></LI>
 	<LI><A HREF="3-4.html">3.4  数値演算ライブラリ </A></LI>
 	<LI><A HREF="3-5.html">3.5  IGESパーサ </A></LI>
 	<LI><A HREF="3-6.html">3.6  STLパーサ </A></LI>
