--- a/1-1.html
+++ b/1-1.html
@@ -29,35 +29,35 @@
 <BR><HR><H2>Kodatunoとは</H2>
 
 　Kodatunoは純国産のマルチプラットフォームなオープンソースCAMカーネルを目指し開発中の
-ソフトウェアです。マルチプラットフォーム環境を確保するため、開発言語はC/C++を用いてお
-り、3D描画用APIにOpenGL GLUTを用いています。また更に、R1.1からは高機能GUIアプリケーション開発環境である
-Wide StudioをGUIとして用いています。R2.0では、WideStudioをGUIに用いたVersion（W/S Ver）及び、
-OpenGLのみを用いたVersion（N/G Ver）の両方を同包しています。<BR>
-　本ソフトウェアは、CADデータの中間フォーマ
-ットであるIGES(JAMA-IS V1.04)をサポートしています。このIGESデータ
-を構成する全ての曲線・曲面エンティティは、内部表現としてNURBSに変換され、保持される構
-造となっています。
-　本ソフトウェアの開発目的は、NURBS曲線/曲面に対する各種操作、演算関数を各種用意し、
-CAM開発者がこれら関数を組み合わせることによって、それぞれの目的に即したアプリケーショ
-ンを構築することが可能となることです。
-  本ソフトウェアはまだまだ発展途上です。さらなる発展のためのご協力、ご助言が頂けることを期待しております。
+ソフトウェアです．マルチプラットフォーム環境を確保するため，開発言語はC/C++を用いてお
+り，3D描画用APIにOpenGL GLUTを用いています．また更に，R1.1からは高機能GUIアプリケーション開発環境である
+Wide StudioをGUIとして用いています．R2.0では，WideStudioをGUIに用いたVersion（W/S Ver）及び，
+OpenGLのみを用いたVersion（N/G Ver）の両方を同包しています．<BR>
+　本ソフトウェアは，CADデータの中間フォーマ
+ットであるIGES(JAMA-IS V1.04)をサポートしています．このIGESデータ
+を構成する全ての曲線・曲面エンティティは，内部表現としてNURBSに変換され，保持される構
+造となっています．
+　本ソフトウェアの開発目的は，NURBS曲線/曲面に対する各種操作，演算関数を各種用意し，
+CAM開発者がこれら関数を組み合わせることによって，それぞれの目的に即したアプリケーショ
+ンを構築することが可能となることです．
+  本ソフトウェアはまだまだ発展途上です．さらなる発展のためのご協力，ご助言が頂けることを期待しております．
 
 <BR><BR><HR><H3>正式名称</H3>
-Kodatuno R2.0<BR>
+Kodatuno<BR>
 (Kodatuno is Open Developed Alternative Trajectory Utility Nucleus Object)<BR>
 
 <BR><BR><H3>ライセンス</H3>
-Kodatunoはオープンソースソフトウェアです。
-GNUの一般使用許可契約(GPL)に基づいて利用願います。<BR>
+Kodatunoはオープンソースソフトウェアです．
+GNUの一般使用許可契約(GPL)に基づいて利用願います．<BR>
 
 <BR><BR><H3>連絡先</H3>
-ご意見、ご要望、問い合わせ等は下記電子メールでお送りください。<BR><BR>
+ご意見，ご要望，問い合わせ等は下記電子メールでお送りください．<BR><BR>
    金沢大学 理工研究域 機械工学系 マンマシン研究室<BR>
    浅川直紀<BR>
    k-info@mm.hm.t.kanazawa-u.ac.jp<BR>  
 
 <BR><BR><H3>配布</H3>
-下記URLよりダウンロードできます。<BR>
+下記URLよりダウンロードできます．<BR>
 http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
 
 <BR><BR><H3>動作確認環境</H3>
@@ -71,9 +71,10 @@ http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
 <BR><H3>更新履歴</H3>
 <UL>
 <LI>2010/03 Kodatuno R1.0<BR>
-<LI>2011/03 Kodatuno R1.1　　　Wide Studioの実装、バグ修正、機能強化<BR>
-<LI>2011/11 Kodatuno R2.0　　　バグ修正、機能強化<BR>
+<LI>2011/03 Kodatuno R1.1　　　Wide Studioの実装，バグ修正，機能強化<BR>
+<LI>2011/11 Kodatuno R2.0　　　バグ修正，機能強化<BR>
 <LI>2012/05 Kodatuno R2.1　　　バグ修正<BR>
+<LI>2013/01 Kodatuno R2.2　　　バグ修正，機能強化，機能の一部変更<BR>
 
 </LI></UL>
 
@@ -82,13 +83,13 @@ http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
   開発コアチーム：高杉敬吾（金沢大学）<BR>
 
 <BR><BR><H3>謝辞</H3>
-  本システムの基礎開発に尽力いただいた元マンマシン研究室の西野高志、松本健児、三枝史岳、熊坂拓也の
-  諸氏に感謝します。<BR>
+  本システムの基礎開発に尽力いただいた元マンマシン研究室の西野高志，松本健児，三枝史岳，熊坂拓也の
+  諸氏に感謝します．<BR>
 
 <BR><BR><HR><H3><<免責事項>></H3>
-　このソフトウェアを使用したことによって生じたすべての障害・損害・不具合等に関しては、
-私と私の関係者および私の所属するいかなる団体・組織とも、一切の責任を負いません。各自
-の責任においてご使用ください。
+　このソフトウェアを使用したことによって生じたすべての障害・損害・不具合等に関しては，
+私と私の関係者および私の所属するいかなる団体・組織とも，一切の責任を負いません．各自
+の責任においてご使用ください．
 
 
 </blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
