--- a/1-3.html
+++ b/1-3.html
@@ -28,15 +28,15 @@
 <blockquote> 
 
 <BR><HR><H2>Kodatuno内部表現の概要</H2>
-　KodatunoはCADデータの中間フォーマットであるIGESあるいはSTL形式のデータを読み込むことができます。ただし、
-CADでのIGES出力に際して、NURBS出力指定がオプションなどにより選択可能である場合は、そのように指定しなければなりません。<BR>
-　IGESフォーマットCADデータはIGESパーサーによってKodatuno内部表現に変換されます。IGESデータが持つ曲面情報は基本的には既に
-NURBS表現になっていないといけません。Kodatuno内部では、各立体データを"Body"と呼びます。また、複数のIGESデータを読み込んだ場合は、
-複数のBodyが生成され、これらBodyは"Body List"に登録されます。<BR>
-　各BodyはIGESデータのNURBS表現として保持されます。NURBS表現の種類としては、NURBS曲面、トリムドNURBS曲面、NURBS曲線の3つが存在します。
-Bodyを構成するこれら要素をオブジェクトと呼びます。<BR>
-　更に詳しい情報は<A HREF="1-4.html">1.4  Koudatuno内部でのCADデータの構成 </A>及び、
-　<A HREF="3-8.html">3.8  CADデータの内部表現 </A>を参照してください。
+　KodatunoはCADデータの中間フォーマットであるIGESあるいはSTL形式のデータを読み込むことができます．ただし，
+CADでのIGES出力に際して，NURBS出力指定がオプションなどにより選択可能である場合は，そのように指定しなければなりません．<BR>
+　IGESフォーマットCADデータはIGESパーサーによってKodatuno内部表現に変換されます．IGESデータが持つ曲面情報は基本的には既に
+NURBS表現になっていないといけません．Kodatuno内部では，各立体データを"Body"と呼びます．また，複数のIGESデータを読み込んだ場合は，
+複数のBodyが生成され，これらBodyは"Body List"に登録されます．<BR>
+　各BodyはIGESデータのNURBS表現として保持されます．NURBS表現の種類としては，NURBS曲面，トリムドNURBS曲面，NURBS曲線の3つが存在します．
+Bodyを構成するこれら要素をオブジェクトと呼びます．<BR>
+　更に詳しい情報は<A HREF="1-4.html">1.4  Koudatuno内部でのCADデータの構成 </A>及び，
+　<A HREF="3-8.html">3.8  CADデータの内部表現 </A>を参照してください．
 
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/InnerExpression.jpg"></CENTER></P>
