--- a/2-2.html
+++ b/2-2.html
@@ -29,46 +29,46 @@
 
 <BR><HR><H2>Kodatuno¤òÆ°¤«¤·¤Æ¤ß¤è¤¦</H2>
 
-¡¡Kodatuno¤Îµ¯Æ°¤«¤é¼Â¹Ô¤Þ¤Ç¤Î¼ê½ç¤ò°Ê²¼¤Ë¼¨¤·¤Þ¤¹¡£(³«È¯´Ä¶­¤Î¹½ÃÛ¤Ï½ªÎ»¤·¤Æ¤¤¤ë¤â¤Î¤È¤·¤Þ¤¹¡£)<BR>
-¡¡Kodatuno¤Ë¤Ï¡¢<A HREF="./1-1.html">1.1 Kodatuno¤È¤Ï</A> ¤Ç½Ò¤Ù¤¿¤È¤ª¤ê¡¢GUI¤¬´û¤Ë¼ÂÁõ¤µ¤ì¤¿W/S Ver.¤È¡¢
-GUI¤¬¼ÂÁõ¤µ¤ì¤Æ¤¤¤Ê¤¤N/G Ver.¤ÎÆó¤Ä¤¬¤¢¤ê¤Þ¤¹¡£N/G Ver.¤ÏGUI¼ÂÁõ¤¬Ìµ¤¤Ê¬¥½¡¼¥¹¿ô¤Ï¾¯¤Ê¤¤¤Ç¤¹¤¬¡¢Kodatuno¤¬
-Äó¶¡¤¹¤ë¥â¥¸¥å¡¼¥ë¤òÁÈ¤ß¹ç¤ï¤»¤ÆCAM¥¢¥×¥ê¥±¡¼¥·¥ç¥ó¤òºîÀ®¤¹¤ë¤¿¤á¤Î¥æ¡¼¥¶¡¼¥¤¥ó¥¿¡¼¥Õ¥§¡¼¥¹¤â¾¯¤Ê¤¤¤¿¤á¡¢
-Kodatuno¤òÆâÉô¤Þ¤ÇÍý²ò²ÄÇ½¤Ê¾åµé¼Ô¸þ¤±¤Î¥Ð¡¼¥¸¥ç¥ó¤È¤Ê¤ê¤Þ¤¹¡£<BR>
-¡¡¤Þ¤º¤Ï¡¢W/S Ver. ¤Ë´·¤ì¤Æ¤¤¤¿¤À¤­¡¢¥«¡¼¥Í¥ëÉô¤Ë¤Þ¤ÇÊÑ¹¹¤ò²Ã¤¨¤¿¤¤¾õ¶·¤Ë¤Ê¤Ã¤¿¾ì¹ç¤ÏN/G Ver. ¤òÍøÍÑÄº¤¯¤³¤È¤ò
-¤ª´«¤á¤·¤Þ¤¹¡£¤è¤Ã¤Æ¤³¤ì°Ê¹ß¤ÏW/S Ver.¤ò¥á¥¤¥ó¤È¤·¤¿¥æ¡¼¥¶¡¼¥º¥¬¥¤¥É¤È¤Ê¤Ã¤Æ¤¤¤Þ¤¹¤Î¤Ç¡¢¤´Î»¾µ¤¯¤À¤µ¤¤¡£
+¡¡Kodatuno¤Îµ¯Æ°¤«¤é¼Â¹Ô¤Þ¤Ç¤Î¼ê½ç¤ò°Ê²¼¤Ë¼¨¤·¤Þ¤¹¡¥(³«È¯´Ä¶­¤Î¹½ÃÛ¤Ï½ªÎ»¤·¤Æ¤¤¤ë¤â¤Î¤È¤·¤Þ¤¹¡¥)<BR>
+¡¡Kodatuno¤Ë¤Ï¡¤<A HREF="./1-1.html">1.1 Kodatuno¤È¤Ï</A> ¤Ç½Ò¤Ù¤¿¤È¤ª¤ê¡¤GUI¤¬´û¤Ë¼ÂÁõ¤µ¤ì¤¿W/S Ver.¤È¡¤
+GUI¤¬¼ÂÁõ¤µ¤ì¤Æ¤¤¤Ê¤¤N/G Ver.¤ÎÆó¤Ä¤¬¤¢¤ê¤Þ¤¹¡¥N/G Ver.¤ÏGUI¼ÂÁõ¤¬Ìµ¤¤Ê¬¥½¡¼¥¹¿ô¤Ï¾¯¤Ê¤¤¤Ç¤¹¤¬¡¤Kodatuno¤¬
+Äó¶¡¤¹¤ë¥â¥¸¥å¡¼¥ë¤òÁÈ¤ß¹ç¤ï¤»¤ÆCAM¥¢¥×¥ê¥±¡¼¥·¥ç¥ó¤òºîÀ®¤¹¤ë¤¿¤á¤Î¥æ¡¼¥¶¡¼¥¤¥ó¥¿¡¼¥Õ¥§¡¼¥¹¤â¾¯¤Ê¤¤¤¿¤á¡¤
+Kodatuno¤òÆâÉô¤Þ¤ÇÍý²ò²ÄÇ½¤Ê¾åµé¼Ô¸þ¤±¤Î¥Ð¡¼¥¸¥ç¥ó¤È¤Ê¤ê¤Þ¤¹¡¥<BR>
+¡¡¤Þ¤º¤Ï¡¤W/S Ver. ¤Ë´·¤ì¤Æ¤¤¤¿¤À¤­¡¤¥«¡¼¥Í¥ëÉô¤Ë¤Þ¤ÇÊÑ¹¹¤ò²Ã¤¨¤¿¤¤¾õ¶·¤Ë¤Ê¤Ã¤¿¾ì¹ç¤ÏN/G Ver. ¤òÍøÍÑÄº¤¯¤³¤È¤ò
+¤ª´«¤á¤·¤Þ¤¹¡¥¤è¤Ã¤Æ¤³¤ì°Ê¹ß¤ÏW/S Ver.¤ò¥á¥¤¥ó¤È¤·¤¿¥æ¡¼¥¶¡¼¥º¥¬¥¤¥É¤È¤Ê¤Ã¤Æ¤¤¤Þ¤¹¤Î¤Ç¡¤¤´Î»¾µ¤¯¤À¤µ¤¤¡¥
 
 
 <UL>
 <LI>Kodatuno¤ÎÆþ¼ê<BR><BR>
-²¼µ­URL¤è¤êKodatuno R***¤ò¥À¥¦¥ó¥í¡¼¥É¤·¤Þ¤¹¡£<BR><BR>
+²¼µ­URL¤è¤êKodatuno R***¤ò¥À¥¦¥ó¥í¡¼¥É¤·¤Þ¤¹¡¥<BR><BR>
 http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR><BR>
-¥À¥¦¥ó¥í¡¼¥É¤·¤¿Kodatuno°µ½Ì¥Õ¥¡¥¤¥ë¤òÇ¤°Õ¤Î¾ì½ê¤Ø²òÅà¤·¤Þ¤¹¡£
-²òÅà¤¬´°Î»¤¹¤ë¤È¡¢"Kodatuno_R***"¤Ê¤ë¥Õ¥©¥ë¥À¤¬À¸À®¤µ¤ì¤Þ¤¹¡£<BR><BR>
+¥À¥¦¥ó¥í¡¼¥É¤·¤¿Kodatuno°µ½Ì¥Õ¥¡¥¤¥ë¤òÇ¤°Õ¤Î¾ì½ê¤Ø²òÅà¤·¤Þ¤¹¡¥
+²òÅà¤¬´°Î»¤¹¤ë¤È¡¤"Kodatuno_R***"¤Ê¤ë¥Õ¥©¥ë¥À¤¬À¸À®¤µ¤ì¤Þ¤¹¡¥<BR><BR>
 
 <BR><BR><LI>OpenGL glut.h¤Î¥¤¥ó¥¯¥ë¡¼¥ÉÀè»ØÄê<BR><BR>
-»ÈÍÑ¤¹¤ëOS¤Ë¤è¤Ã¤Æglut.h¤Î¥¤¥ó¥¯¥ë¡¼¥ÉÀè¤¬°Û¤Ê¤ê¤Þ¤¹¡£¥À¥¦¥ó¥í¡¼¥É¤·²òÅà¤·¤¿Kodatuno¥Õ¥©¥ë¥À¤«¤é¡¢"Kodatun R***"-->
-"00_No GUI Ver"-->"Src"¤¢¤ë¤¤¤Ï"01_WideStudio Ver"-->"Src"¤ÈÃ©¤ê¡¢"StdAfx.h"¤ò³«¤¤¤Æ¤¯¤À¤µ¤¤¡£¥Ç¥Õ¥©¥ë¥È¤ÎÀßÄê¤Ï¼¡¤Î¤è¤¦¤Ë
-Windows¤ËÂÐ±þ¤·¤¿¥¤¥ó¥¯¥ë¡¼¥ÉÀè¤Ë¤Ê¤Ã¤Æ¤¤¤Þ¤¹¡£
+»ÈÍÑ¤¹¤ëOS¤Ë¤è¤Ã¤Æglut.h¤Î¥¤¥ó¥¯¥ë¡¼¥ÉÀè¤¬°Û¤Ê¤ê¤Þ¤¹¡¥¥À¥¦¥ó¥í¡¼¥É¤·²òÅà¤·¤¿Kodatuno¥Õ¥©¥ë¥À¤«¤é¡¤"Kodatun R***"-->
+"00_No GUI Ver"-->"Src"¤¢¤ë¤¤¤Ï"01_WideStudio Ver"-->"Src"¤ÈÃ©¤ê¡¤"StdAfx.h"¤ò³«¤¤¤Æ¤¯¤À¤µ¤¤¡¥¥Ç¥Õ¥©¥ë¥È¤ÎÀßÄê¤Ï¼¡¤Î¤è¤¦¤Ë
+Windows¤ËÂÐ±þ¤·¤¿¥¤¥ó¥¯¥ë¡¼¥ÉÀè¤Ë¤Ê¤Ã¤Æ¤¤¤Þ¤¹¡¥
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/glut header source.jpg"></CENTER></P>
 </CENTER></P>
-³Æ¼«¤ÎOS¤Ë¹ç¤ï¤»¤Æ¡¢Å¬µ¹ÊÑ¹¹¤·¤Æ¤¯¤À¤µ¤¤¡£<BR><BR>
+³Æ¼«¤ÎOS¤Ë¹ç¤ï¤»¤Æ¡¤Å¬µ¹ÊÑ¹¹¤·¤Æ¤¯¤À¤µ¤¤¡¥<BR><BR>
 
 <BR><BR><LI>Wide Studio Version¤ÎÆ°ºî³ÎÇ§<BR><BR>
 <UL>
-<LI>Wide Studio¤Îµ¯Æ°¡¢Kodatuno¥×¥í¥¸¥§¥¯¥È¤ÎÆÉ¤ß¹þ¤ß<BR><BR>
-Wide Studio¤òµ¯Æ°¤·¤Þ¤¹¡£<BR>
-¥Ä¡¼¥ë¥Ð¡¼¤«¤é¡¢"¥×¥í¥¸¥§¥¯¥È¤ÎÆÉ¤ß¹þ¤ß"¤òÁªÂò¤¹¤ë¤È¡¢¥Õ¥¡¥¤¥ëÁªÂò¥À¥¤¥¢¥í¥°¤¬É½¼¨¤µ¤ì¤Þ¤¹¡£
-¥À¥¦¥ó¥í¡¼¥É¤·²òÅà¤·¤¿Kodatuno¥Õ¥©¥ë¥À¤«¤é¡¢"Kodatuno R***"-->"01_WideStudio Ver"-->"Src"¤ÈÃ©¤ë¤È¡¢"Kodatuno.prj"¤Ê¤ë
-Wide StudioÀìÍÑ¤Î¥×¥í¥¸¥§¥¯¥È¥Õ¥¡¥¤¥ë¤¬¤¢¤ê¤Þ¤¹¤Î¤Ç¡¢¤³¤ì¤òÁªÂò¤·"OK"¡£¤³¤ì¤ÇWide Studio¤ËKodatuno¤¬
-ÆÉ¤ß¹þ¤Þ¤ì¤¿¤³¤È¤Ë¤Ê¤ê¤Þ¤¹¡£<BR><BR>
+<LI>Wide Studio¤Îµ¯Æ°¡¤Kodatuno¥×¥í¥¸¥§¥¯¥È¤ÎÆÉ¤ß¹þ¤ß<BR><BR>
+Wide Studio¤òµ¯Æ°¤·¤Þ¤¹¡¥<BR>
+¥Ä¡¼¥ë¥Ð¡¼¤«¤é¡¤"¥×¥í¥¸¥§¥¯¥È¤ÎÆÉ¤ß¹þ¤ß"¤òÁªÂò¤¹¤ë¤È¡¤¥Õ¥¡¥¤¥ëÁªÂò¥À¥¤¥¢¥í¥°¤¬É½¼¨¤µ¤ì¤Þ¤¹¡¥
+¥À¥¦¥ó¥í¡¼¥É¤·²òÅà¤·¤¿Kodatuno¥Õ¥©¥ë¥À¤«¤é¡¤"Kodatuno R***"-->"01_WideStudio Ver"-->"Src"¤ÈÃ©¤ë¤È¡¤"Kodatuno.prj"¤Ê¤ë
+Wide StudioÀìÍÑ¤Î¥×¥í¥¸¥§¥¯¥È¥Õ¥¡¥¤¥ë¤¬¤¢¤ê¤Þ¤¹¤Î¤Ç¡¤¤³¤ì¤òÁªÂò¤·"OK"¡¥¤³¤ì¤ÇWide Studio¤ËKodatuno¤¬
+ÆÉ¤ß¹þ¤Þ¤ì¤¿¤³¤È¤Ë¤Ê¤ê¤Þ¤¹¡¥<BR><BR>
 
 
 
 <BR><BR><LI>¥³¥ó¥Ñ¥¤¥ë¤È¼Â¹Ô<BR><BR>
-Wide Studio¤Î¥Ä¡¼¥ë¥Ð¡¼¤«¤é"¥Ó¥ë¥É¥ª¡¼¥ë"¤ò¥¯¥ê¥Ã¥¯¡£Kodatuno¤Î¥³¥ó¥Ñ¥¤¥ë¤¬¼Â¹Ô¤µ¤ì¤Þ¤¹¡£<BR>
-Wide Studio¤Î¥á¥Ã¥»¡¼¥¸¥À¥¤¥¢¥í¥°¤ÎºÇ²¼¹Ô¤Ë"½ªÎ»¤·¤Þ¤·¤¿¡¥"¤¬É½¼¨¤µ¤ì¤¿¤é¡¢¥³¥ó¥Ñ¥¤¥ëERROR¤¬¤Ê¤¤¤³¤È¤ò
-³ÎÇ§¤·¡¢¥Ä¡¼¥ë¥Ð¡¼"¼Â¹Ô"¤ò¥¯¥ê¥Ã¥¯¡£¤³¤ì¤ÇKodatuno¥¢¥×¥ê¥±¡¼¥·¥ç¥ó¤¬µ¯Æ°¤·¤Þ¤¹¡£
+Wide Studio¤Î¥Ä¡¼¥ë¥Ð¡¼¤«¤é"¥Ó¥ë¥É¥ª¡¼¥ë"¤ò¥¯¥ê¥Ã¥¯¡¥Kodatuno¤Î¥³¥ó¥Ñ¥¤¥ë¤¬¼Â¹Ô¤µ¤ì¤Þ¤¹¡¥<BR>
+Wide Studio¤Î¥á¥Ã¥»¡¼¥¸¥À¥¤¥¢¥í¥°¤ÎºÇ²¼¹Ô¤Ë"½ªÎ»¤·¤Þ¤·¤¿¡¥"¤¬É½¼¨¤µ¤ì¤¿¤é¡¤¥³¥ó¥Ñ¥¤¥ëERROR¤¬¤Ê¤¤¤³¤È¤ò
+³ÎÇ§¤·¡¤¥Ä¡¼¥ë¥Ð¡¼"¼Â¹Ô"¤ò¥¯¥ê¥Ã¥¯¡¥¤³¤ì¤ÇKodatuno¥¢¥×¥ê¥±¡¼¥·¥ç¥ó¤¬µ¯Æ°¤·¤Þ¤¹¡¥
 </UL></UL>
 <BR>
 <P><CENTER>
@@ -79,8 +79,8 @@ Wide Studio¤Î¥á¥Ã¥»¡¼¥¸¥À¥¤¥¢¥í¥°¤ÎºÇ²¼¹Ô¤Ë"½ªÎ»¤·¤Þ¤·¤¿¡¥"¤¬É½¼¨¤µ¤ì¤¿¤é¡¢¥³¥ó¥
 <BR><BR>
 
 <UL>¢¨ No GUI Version (Wide Studio¤òÍÑ¤¤¤Ê¤¤Version)¤ÎÆ°ºî³ÎÇ§<BR><BR>
-¡¡½êÄê¤Î¥³¥ó¥Ñ¥¤¥é¡¼¤òÍÑ¤¤¤Æ"Kodatuno R***"-->"00_No GUI Ver"-->"Src"¤Ë¤¢¤ë¥½¡¼¥¹¤òÁ´¤Æ¥³¥ó¥Ñ¥¤¥ë¤·¡¢
-¼Â¹Ô¥Õ¥¡¥¤¥ë¤òÀ¸À®¤·¤Æ¤¯¤À¤µ¤¤¡£gcc¤ò¤ª»È¤¤¤Î¾ì¹ç¤Ï¡¢Æ±¥Õ¥©¥ë¥ÀÆâ¤Ë¤¢¤ëmake¥Õ¥¡¥¤¥ë¤òÍøÍÑ¤¯¤À¤µ¤¤¡£
+¡¡½êÄê¤Î¥³¥ó¥Ñ¥¤¥é¡¼¤òÍÑ¤¤¤Æ"Kodatuno R***"-->"00_No GUI Ver"-->"Src"¤Ë¤¢¤ë¥½¡¼¥¹¤òÁ´¤Æ¥³¥ó¥Ñ¥¤¥ë¤·¡¤
+¼Â¹Ô¥Õ¥¡¥¤¥ë¤òÀ¸À®¤·¤Æ¤¯¤À¤µ¤¤¡¥gcc¤ò¤ª»È¤¤¤Î¾ì¹ç¤Ï¡¤Æ±¥Õ¥©¥ë¥ÀÆâ¤Ë¤¢¤ëmake¥Õ¥¡¥¤¥ë¤òÍøÍÑ¤¯¤À¤µ¤¤¡¥
 </UL>
 
 
