--- a/2-7.html
+++ b/2-7.html
@@ -29,78 +29,85 @@
 
 <BR><HR><H2>簡単なアプリケーションの作成</H2>
 
-このセクションでは、サンプルアプリケーションの応用として、1つのNURBS曲面をz方向にr倍し,y軸周りにdeg度回転させ、z方向にhだけシフトさせて
-新たなNURBS曲面を作成し、これら2つのNURBS曲面の交線を算出してみます。<BR><BR>
+　このセクションでは，サンプルアプリケーションの応用として，ユーザーボタンの5番目をクリックすると，1つのNURBS曲面をz方向にr倍し,y軸周りにdeg度回転させ，z方向にhだけシフトさせて
+新たなNURBS曲面を作成し，これら2つのNURBS曲面の交線を算出するアプリケーションを作成してみましょう．<BR>
+このとき，"User Status"のプロパティー値には，r, deg, hと，交点間隔の4つを入力する仕様とします．<BR>
 
 <OL>
-<BR><LI>まず、UserFunc.cpp内のCalcIntersecPts()関数を以下のように変更します。
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/UserFunc_CalcIntersecPts2.jpg"></CENTER></P>
-</CENTER></P>
+<BR><LI>まず、UserFunc.cpp内のUSERクラスのコンストラクタに，ユーザーボタンの5番目を押すと実行される関数を登録しましょう．USER::USER()を以下のように変更します。
 
-<BR><LI>次に、UserFuncSub.hにExecSampleFunc4()をプロトタイプ宣言します。
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/UserFuncSub_H2.jpg"></CENTER></P>
-</CENTER></P>
+<P><CENTER><IMG SRC="pixmaps/MyApp1.jpg"></CENTER></P>
 
-<BR><LI>次に、UserFuncSub.cppにExecSampleFunc4の実体を記述します。これは、ExeSampleFunc1()を丸ごとコピーし、ContourLine()のみ
-異なる関数とすればよいでしょう。今回はCrossLine()という関数名にします。引数は、
+<BR><LI>次に、UserFunc.hにExecMyApp()をプロトタイプ宣言します。
+
+<P><CENTER><IMG SRC="pixmaps/MyApp2.jpg"></CENTER></P>
+
+<BR><LI>また，ユーザーボタン名も変更しましょう．変更するには，"UserFunc.cpp"のUSER::SetMenuLabelName()を変更します．
+
+<P><CENTER><IMG SRC="pixmaps/MyApp5.jpg"></CENTER></P>
+
+こちらの例では，"Exec MyApp"という名前に変更しました．<BR>
+
+<BR><LI>UserFunc.cppの適当な位置にExecMyAppの実体を記述します。ExeSampleFunc1()を参考にして，"User Status"がMode1のときに実行されるようにしましょう．
+実行される関数名は何でもかまいませんが，ここではMyAppMain()としました．<BR>
+
+<P><CENTER><IMG SRC="pixmaps/MyApp3.jpg"></CENTER></P>
+
+MyAppMain()に渡す引数は，BODYList, OBJECTList, PickCount, UserStat.Propの4つが必要になります．
 <UL>
-<BR><LI>*NurbsS:　読み込んだNURBS曲面へのポインタ
-<BR><LI>r:　NURBS曲面の倍率(prop[0])
-<BR><LI>deg:　NURBS曲面の回転量(prop[1])
-<BR><LI>h:　r倍されたNURBS曲面のシフト量(prop[2])
-<BR><LI>ds:　交点群各点間の距離(prop[3])<BR><BR>
+<BR><LI>BODYList *BodyList
+<BR><LI>OBJECTList *ObjList
+<BR><LI>int PickCount
+<BR><LI>double Prop[ ]<BR><BR>
 </UL>
-とします。
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/UserFunc_ExecSampleFunc4.jpg"></CENTER></P>
-</CENTER></P>
-また同時に、UserFuncSub.hにCrossLine()のプロトタイプ宣言を付加しておいてください。<BR><BR>
+とします。<BR>
 
-<BR><LI>CrossLine()の実体を書いていきます。
-まず、NURBS演算関数を用いるため、NURBS_Funcクラスのオブジェクトを生成します。次に、NURBS_FuncのChRatioNurbsS()関数、RotNurbsS()関数、
-ShiftNurbsSurfe()関数を用いて、指定したNURBS曲面をz方向にr倍し、y軸周りにdeg度回転させ、z方向にdシフトさせます。
-このとき、変更されたNURBS曲面はオリジナルのNURBS曲面とは異なる新たなNURBS曲面として定義しなおす必要があります。これは、NURBS_FuncのGenNurbsS()関数を用います。
-ここまでで、実際にr倍されたNURBS曲面が生成されたか、グラフィックに描画して確かめてみましょう。
-このとき、NURBS描画関数を使うために、Describe_BODYクラスのオブジェクトを生成しなければなりません。NURBS曲面描画関数はDrawNurbsSurfe()です。<BR>
-ここまでのプログラムを以下に示します。
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/UserFunc_CrossLine1.jpg"></CENTER></P>
-</CENTER></P>
 
-このプログラムを実行してみましょう。これまでのプログラムの変更を全て保存し、<A HREF="2-2.html">2.2  Kodatunoを動かしてみよう </A>に沿って
-コンパイル、実行してください。次に、"FreeSurf.IGS"を読み込み、選択状態にします。"User Stat"を開き、Modeを4にセット、Prop1〜3までに適当な値を入れ、
+<BR><LI>MyAppMain()のプロトタイプ宣言を"SampleFunc.h"に記述します．<BR>
+
+<BR><LI>次にいよいよ，MyAppMain()の実体を書いていきます．今回は"SampleFunc2.cpp"に書いていきましょう．
+
+<P><CENTER><IMG SRC="pixmaps/MyApp4.jpg"></CENTER></P>
+
+　上のソースには，説明しやすいように1から順番に行番号が振ってあります．<BR>
+　この課題では，前例題にはない，NURBS曲面をコピーするということを行います．NURBS曲面をコピーするには，まず，コピーするための新たな箱を用意します(15行目)．
+次に，NURBS_Func::GenNurbsS()関数を用いてコピーを実行します(16行目)．<BR>
+　18〜21行目では，"User Status"のプロパティ値を取得しています．今回は，倍率，回転角度，シフト量，交点間隔の4つを入力する仕様でしたので，Prop[0]〜[3]まで
+を得るようにしました．<BR>
+　23行目からは実際にコピーした曲面のアフィン変換を実施しています．ここは<A HREF="./2-6-2.html">2.6.2 NURBS曲面のアフィン変換</A>の例題を参考にしてください．<BR>
+ユーザー定義関数内で新たに作成したNURBS曲線や曲面をグラフィック描画領域に描画するためには，27, 28行目の操作が必要になります．27行目では，Describe_BODYと呼ばれる
+BODY描画を担当するクラスを呼び出しています．28行目では，このクラスに属するDescribe_BODY::DrawNurbsSurf()関数を呼び出し，描画命令を実行しています．<BR><BR>
+
+　とりあえずここまで書き終えたら，一度このプログラムを実行してみましょう．これまでのプログラムの変更を全て保存し、<A HREF="2-2.html">2.2  Kodatunoを動かしてみよう </A>に沿って
+コンパイル、実行してください。次に、"FreeSurf.IGS"を読み込み、選択状態にします。"User Stat"を開き、Modeを1にセット、Prop1〜3までに適当な値を入れ、
 "CalcIntersecLine"ボタンを押します。下図は、Prop1=2, Prop2=30, Prop3=10とした場合の結果です。
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/UserFunc_CrossLine1_Result.jpg"></CENTER></P>
-</CENTER></P>
 
-ここで、新たに作成したNURBS曲面は、新たなBodyとして登録されているわけではないことに注意してください。新たに登録する場合は、
-BODY_HandlerクラスのRegistNurbsStoBody()関数を用います。このとき、この関数の引数として、登録するBODYListへのポインタと新たなBODYが必要になります。
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/UserFunc_CrossLine2.jpg"></CENTER></P>
-</CENTER></P>
+<P><CENTER><IMG SRC="pixmaps/MyApp6.jpg"></CENTER></P>
 
-<BR><LI>ここでは、新たなBodyとして登録しないで進めます。<BR>
-次に、NURBS曲面同士の交点群を算出するために、NFunc.CalcIntersecPtsNurbsSSearch()関数を用います。さらに、これによって得られた交点群から、NURBS曲線を生成
-してみます。
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/UserFunc_CrossLine3.jpg"></CENTER></P>
-</CENTER></P>
+　新たに生成したNURBS曲面が表示されたと思います．しかし，試していただければ分かるようにピックすることはできません．これは，新たに生成したNURBS曲面をBODYListに新たな
+Bodyとして登録していないためです．言い換えれば，現時点ではただ表示しているだけということになります．<BR>
+そこで、新たに作成したNURBS曲面を新たなBodyとして登録してみましょう。新たに登録する場合は、
+BODYクラスのRegistNurbsStoBody()関数を用います。このとき、この関数の引数として、登録するBODYListへのポインタ, 新たなBody, Body名の3つが必要になります．
 
-赤枠部を付加することにより、交点群が算出され、描画されます。また、青枠部を付加すれば、得られた交点群からNURBS曲線を生成します。
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/UserFunc_CrossLine2_Result.jpg"></CENTER></P>
-［交点群］
-</CENTER></P>
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/UserFunc_CrossLine3_Result.jpg"></CENTER></P>
-［交線］
-</CENTER></P>
+<P><CENTER><IMG SRC="pixmaps/MyApp7.jpg"></CENTER></P>
 
-交線の表示が部分的におかしいのは、交点配列がきれいにソートされていないからです。CalcIntersecPtsNurbsSSearch()関数などを用いて交点群を生成する場合は、
-かならずしも、順序正しく点が格納されていないため、何らかのソート用コードを記述しなければなりません。<BR><BR>
+ここで，Describe_BDOY::DrawNurbsSurf()が消えていることに注意してください．生成したNURBS曲面をBodyとしてリストに登録すると，Kodatuno内部で描画対象として
+認識してくれますので，わざわざ描画指令を送る必要がなくなります．さらに，リスト登録することによって，ピックが可能になります．
+
+<BR><LI>次に、NURBS曲面同士の交点群を算出するために、NFunc.CalcIntersecPtsNurbsSSearch()関数を用います。
+
+<P><CENTER><IMG SRC="pixmaps/MyApp8.jpg"></CENTER></P>
+
+
+<BR><LI>交点群が正しく描画されたら，最後に得られた交点群からNURBS曲線を生成してみましょう．
+
+<P><CENTER><IMG SRC="pixmaps/MyApp9.jpg"></CENTER></P>
+
+<P><CENTER><IMG SRC="pixmaps/MyApp10.jpg"></CENTER></P>
+
+
+交線の表示が部分的におかしいのは, 交点配列がきれいにソートされていないからです．CalcIntersecPtsNurbsSSearch()関数などを用いて交点群を生成する場合は，
+かならずしも，順序正しく点が格納されていないため，何らかのソート用コードを記述しなければなりません．<BR><BR>
 </OL>
 
 以上で、簡単なアプリケーション作成手順の説明を終わります。
